export const snapshot = {};

snapshot[`DeployBodySchema snapshot 1`] = `
{
  "\$schema": "https://json-schema.org/draft/2020-12/schema",
  additionalProperties: false,
  properties: {
    env: {
      additionalProperties: {
        type: "string",
      },
      propertyNames: {
        type: "string",
      },
      type: "object",
    },
    html: {
      maxLength: 10000000,
      minLength: 1,
      type: "string",
    },
    worker: {
      maxLength: 10000000,
      minLength: 1,
      type: "string",
    },
  },
  required: [
    "worker",
    "html",
  ],
  type: "object",
}
`;

snapshot[`EnvSchema snapshot 1`] = `
{
  "\$schema": "https://json-schema.org/draft/2020-12/schema",
  additionalProperties: {
    type: "string",
  },
  properties: {
    ASSEMBLYAI_API_KEY: {
      minLength: 1,
      type: "string",
    },
  },
  required: [
    "ASSEMBLYAI_API_KEY",
  ],
  type: "object",
}
`;
